# df-workdetailtest

./: .gitmodules  CMakeLists.txt
data/gridviews/: animals.json  attributes.json  citizens.json  default.json  dogs.json  skills.json
data/unit_filters/: Cats.js
data/workdetails/: Default Work Details.json  Single Skilled Labors.json
icons/: README.md
src/: AbstractColumn.cpp  AbstractColumn.h  Application.cpp  Application.h  CP437.cpp  CP437.h  ColumnFactory.cpp  ColumnFactory.h  ColumnSortOptions.h  Counter.cpp  Counter.h  DFHackProcess.cpp  DFHackProcess.h  DFItemDefs.h  DFItems.h  DFRaws.cpp  DFRaws.h  DFTypes.h  DFUtils.h  DataRole.h  DwarfFortress.cpp  DwarfFortress.h  DwarfFortressData.cpp  DwarfFortressData.h  DwarfFortressReader.cpp  DwarfFortressReader.h  DwarfFortress_linux.cpp  DwarfFortress_read.cpp  DwarfFortress_unsupported_platform.cpp  DwarfFortress_windows.cpp  FilterBar.cpp  FilterBar.h  FilterView.cpp  FilterView.h  GridView.cpp  GridView.h  GridViewDelegate.cpp  GridViewDelegate.h  GridViewManager.cpp  GridViewManager.h  (+81 more)
src/Columns/: AttributesColumn.cpp  AttributesColumn.h  Factory.cpp  Factory.h  NameColumn.cpp  NameColumn.h  SkillsColumn.cpp  SkillsColumn.h  SortOptions.h  SpecialistColumn.cpp  SpecialistColumn.h  UnitFlagsColumn.cpp  UnitFlagsColumn.h  WorkDetailColumn.cpp  WorkDetailColumn.h
src/Groups/: Factory.cpp  Factory.h  GroupByCreature.cpp  GroupByCreature.h  GroupByMigration.cpp  GroupByMigration.h  GroupByWorkDetailAssigned.cpp  GroupByWorkDetailAssigned.h
src/Preferences/: Dock.cpp  Dock.h  Model.cpp  Model.h
src/UnitDetails/: AttributeModel.cpp  AttributeModel.h  Dock.cpp  Dock.h  InventoryModel.cpp  InventoryModel.h  PreferencesModel.cpp  PreferencesModel.h  ProgressDelegate.cpp  ProgressDelegate.h  SkillModel.cpp  SkillModel.h  UnitDataModel.cpp  UnitDataModel.h
src/df/: FlagArray.h  components.h  itemdefs.h  items.h  raws.cpp  raws.h  time.h  types.h  utils.cpp  utils.h
ui/: AboutDialog.ui  AdvancedConnectionDialog.ui  LogDock.ui  MainWindow.ui  PreferencesDialog.ui  PreferencesDock.ui  UnitDetailsDock.ui  WorkDetailEditor.ui  WorkDetailManager.ui
